force-app/main/default/objects/Supplier__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assen</fullName>
            </value>
            <value>
                <fullName>Coevorden</fullName>
            </value>
            <value>
                <fullName>Emmen</fullName>
            </value>
            <value>
                <fullName>Hoogeveen</fullName>
            </value>
            <value>
                <fullName>Meppel</fullName>
            </value>
            <value>
                <fullName>Almere</fullName>
            </value>
            <value>
                <fullName>Biddinghuizen</fullName>
            </value>
            <value>
                <fullName>Emmeloord</fullName>
            </value>
            <value>
                <fullName>Lelystad</fullName>
            </value>
            <value>
                <fullName>Bolsward</fullName>
            </value>
            <value>
                <fullName>Dokkum</fullName>
            </value>
            <value>
                <fullName>Franeker</fullName>
            </value>
            <value>
                <fullName>Harlingen</fullName>
            </value>
            <value>
                <fullName>Hindeloopen</fullName>
            </value>
            <value>
                <fullName>IJlst</fullName>
            </value>
            <value>
                <fullName>Leeuwarden</fullName>
            </value>
            <value>
                <fullName>Sloten</fullName>
            </value>
            <value>
                <fullName>Sneek</fullName>
            </value>
            <value>
                <fullName>Stavoren</fullName>
            </value>
            <value>
                <fullName>Workum</fullName>
            </value>
            <value>
                <fullName>Apeldoorn</fullName>
            </value>
            <value>
                <fullName>Arnhem</fullName>
            </value>
            <value>
                <fullName>Bredevoort</fullName>
            </value>
            <value>
                <fullName>Buren</fullName>
            </value>
            <value>
                <fullName>Borculo</fullName>
            </value>
            <value>
                <fullName>Culemborg</fullName>
            </value>
            <value>
                <fullName>Dieren</fullName>
            </value>
            <value>
                <fullName>Doetinchem</fullName>
            </value>
            <value>
                <fullName>Ede</fullName>
            </value>
            <value>
                <fullName>Elburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>