force-app/main/default/objects/Supplier__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.City__c</field>
            <operation>equals</operation>
            <valueField>Account.BillingCity</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers (Account)</relationshipLabel>
    <relationshipName>Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>