force-app/main/default/objects/Supplier__c/fields/Supplier_Url__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Url__c</fullName>
    <formula>&apos;/lightning/r/Supplier/&apos;+Id+&apos;/view&apos;</formula>
    <label>Supplier Url</label>
    <type>Text</type>
</CustomField>